--- a/honntai.html
+++ b/honntai.html
@@ -14,7 +14,7 @@
 
 	<center>
 		<h1 class="menu">開くタブの数</h1>
-<input type="range" id="slid" min="0" max="500" step="10" class="srid">
+<input type="range" id="slid" min="0" max="50000000" step="10" class="srid">
 <h1 class="value" id="slidvalue">250</h1>
 
 </center>
