--- a/honntai.html
+++ b/honntai.html
@@ -20,6 +20,7 @@
 </center>
 <p>
 <button id="btn" class="btnn">実行</button>
+<button id="btn" class="btnn" onclick="location.href='https://google.com'" style="margin-left: 10px;">停止</button>
 </p>
 </body>
 <script type="text/javascript">
