--- a/honntai.html
+++ b/honntai.html
@@ -9,7 +9,7 @@
 <body>
 
 		<div class="header">
-		<h1 class="title">KepaKepaVirusSuperUltimateコントロールウィンドウ</h1>
+		<h1 class="title">KepaKepaVirusSuperUltimate</h1>
 	</div>
 
 	<center>
@@ -35,7 +35,7 @@
 		kousin();
 	},30)
 	btn.addEventListener("click",function(){
-	user = window.prompt("パスワードを入力してください", "");
+	user = window.prompt("暗号キーを入力してください", "");
 	if(user == "1529"){
        for(i=0;i<valueslid;i++){
 			window.open("mini.html");
