--- a/aiueo.html
+++ b/aiueo.html
@@ -21,7 +21,7 @@
 console.log(cut2)
 console.log(cut3)
 if (cut2 == "aito"){if (cut3 == "aito") {location.href="ok.html"}else{location.href = "https://google.com"}}
-else if(cut2 == "tomohiro"){if(cut3 == "tomohiro"){location.href="ok.html"}else{location.href = "https://google.com"}}else if(cut2 == "aoto"){if(cut3 == "aoto"){location.href="ok.html"}else{location.href = "https://google.com"}}
+else if(cut2 == "tomohiro"){if(cut3 == "tomohiro"){location.href="ok.html"}else{location.href = "https://google.com"}}else if(cut2 == "aoto"){if(cut3 == "aoto"){location.href="ok.html"}else{location.href = "https://google.com"}}else{location.href = "https://google.com"}
 
 </script>
 </html>
